src/objects/rh2__PS_Object_Realtime__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>rh2__Asynchronous__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Forces rollups to run asynchronously on the specified object.</inlineHelpText>
        <label>Enable Asynchronous Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Disable_realtime__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Disables realtime processing on the specified object type when checked.</inlineHelpText>
        <label>Disable Realtime Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Object_Full_Name__c</fullName>
        <label>Full Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Rollup Helper Object Realtime Processing</label>
</CustomObject>